# EducationSystem

./: CMakeLists.txt  main.cpp
Controller/: Controller.cpp  Controller.h
Model/: Course.cpp  Course.h  DoubleMajorStudent.cpp  DoubleMajorStudent.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h
View/: View.cpp  View.h
View/Menus/: CommandsFromFileMenu.cpp  CommandsFromFileMenu.h  InternalMenu.cpp  InternalMenu.h  LeafMenu.cpp  LeafMenu.h  Menu.cpp  Menu.h
